--- a/BedrockBoot/Pages/ModManagerPage.xaml
+++ b/BedrockBoot/Pages/ModManagerPage.xaml
@@ -19,24 +19,24 @@
             </devWinUi:SettingsExpander>
         </DataTemplate>
     </Page.Resources>
-    <Grid Margin="40,48,40,0" Padding="0">
+    <Grid Margin="10,48,10,0" Padding="0">
         <Grid
-            Height="80"
+            Height="90"
             MaxWidth="1000"
             HorizontalAlignment="Stretch"
             VerticalAlignment="Top">
             <TextBlock
                 x:Name="BreadcrumbBar"
-                HorizontalAlignment="Center"
+                HorizontalAlignment="Left"
                 Margin="10,0,10,4"
                 FontSize="30">
             </TextBlock>
-            <Button HorizontalAlignment="Left" Click="ButtonBaseLeft_OnClick" Margin="10,0,10,4">刷新</Button>
-            <Button HorizontalAlignment="Right" Click="ButtonBase_OnClick" Margin="10,0,10,4">打开Mod文件夹</Button>
+            <Button HorizontalAlignment="Left" Click="ButtonBaseLeft_OnClick" Margin="10,48,10,4">刷新</Button>
+            <Button HorizontalAlignment="Right" Click="ButtonBase_OnClick" Margin="10,48,10,4">打开Mod文件夹</Button>
         </Grid>
         <ScrollViewer
             MaxWidth="1000"
-            Margin="0,50,0,0"
+            Margin="-10,80,-10,0"
             HorizontalAlignment="Stretch">
             <StackPanel x:Name="TaskContainer" HorizontalAlignment="Stretch" />
         </ScrollViewer>
