feat: change saving

--- a/BedrockBoot/Controls/ContentDialogContent/DownloadGameContent.xaml
+++ b/BedrockBoot/Controls/ContentDialogContent/DownloadGameContent.xaml
@@ -32,7 +32,7 @@
 
             <ComboBox Header="下载目录" HorizontalAlignment="Stretch"
                       x:Name="ChooseDownloadFolderPathComboBox"></ComboBox>
-
+            <ToggleSwitch x:Name="UseAppx">使用appx</ToggleSwitch>
             <TextBlock Text="启动页面颜色" />
             <controls:ColorPickerButton
                 x:Name="colorPicker"
