--- a/BedrockBoot/Pages/SettingsPage.xaml
+++ b/BedrockBoot/Pages/SettingsPage.xaml
@@ -44,8 +44,7 @@
                             AcceptsExpression="True"
                             Maximum="128"
                             Minimum="1"
-                            SpinButtonPlacementMode="Inline"
-                            Value="12" />
+                            SpinButtonPlacementMode="Inline"/>
                     </dev:SettingsCard>
                     <dev:SettingsCard Header="安装完成保留 Appx 文件">
                         <ToggleSwitch OnContent="" x:Name="SavaAppx" OffContent=""></ToggleSwitch>
@@ -61,10 +60,13 @@
                 Tag="Appearance">
                 <dev:SettingsExpander.Items>
                     <dev:SettingsCard Header="延迟注入时间 (ms)">
-                        <dev:TextBox
+                        <NumberBox
                             x:Name="DelayTime"
                             Width="400"
-                            MinWidth="200"
+                            Minimum="800"
+                            Maximum="20000"
+                            SpinButtonPlacementMode="Inline"
+                            AcceptsExpression="True"
                             HorizontalAlignment="Left" />
                     </dev:SettingsCard>
                 </dev:SettingsExpander.Items>
