--- a/BedrockBoot/Pages/SettingsPage.xaml
+++ b/BedrockBoot/Pages/SettingsPage.xaml
@@ -12,175 +12,187 @@
     dev:BreadcrumbNavigator.PageTitle="设置"
     mc:Ignorable="d">
 
-    <ScrollView
-        Margin="40,48,40,0"
-        Padding="0"
-        HorizontalAlignment="Stretch"
-        VerticalScrollBarVisibility="Auto">
-        <StackPanel
-            MaxWidth="1200"
-            Margin="10"
-            dev:PanelAttach.ChildrenTransitions="Default"
-            Spacing="4">
-
-            <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="设置" />
-
+    <Grid Margin="40,48,40,0" Padding="0">
+        <Grid
+            Height="80"
+            MaxWidth="1000"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Top">
             <TextBlock
-                Margin="0,10,0,0"
-                Style="{StaticResource Subtitle}"
-                Text="行为" />
-            <dev:SettingsExpander
-                Description="启动器的下载行为"
-                Header="下载"
-                HeaderIcon="{dev:FontIcon Glyph=&#xE896;}"
-                Tag="Appearance">
-                <dev:SettingsExpander.Items>
-                    <dev:SettingsCard Header="下载线程">
-                        <NumberBox
-                            x:Name="DownloadThreads"
-                            Width="400"
-                            MinWidth="200"
-                            HorizontalAlignment="Right"
-                            AcceptsExpression="True"
-                            Maximum="128"
-                            Minimum="1"
-                            SpinButtonPlacementMode="Inline"/>
-                    </dev:SettingsCard>
-                    <dev:SettingsCard Header="安装完成保留 Appx 文件">
-                        <ToggleSwitch OnContent="" x:Name="SavaAppx" OffContent=""></ToggleSwitch>
-                    </dev:SettingsCard>
-                </dev:SettingsExpander.Items>
+                x:Name="BreadcrumbBar"
+                Margin="0,0,10,4"
+                FontSize="30"
+                Text="设置">
+            </TextBlock>
+        </Grid>
+        <Grid Margin="0,64,0,10">
+            <ScrollView
+                    HorizontalAlignment="Stretch"
+                    VerticalScrollBarVisibility="Auto">
+                    <StackPanel
+                        MaxWidth="1000"
+                        Margin="10"
+                        dev:PanelAttach.ChildrenTransitions="Default"
+                        Spacing="4">
 
-            </dev:SettingsExpander>
+                        <TextBlock
+                            Margin="0,10,0,0"
+                            Style="{StaticResource Subtitle}"
+                            Text="行为" />
+                        <dev:SettingsExpander
+                            Description="启动器的下载行为"
+                            Header="下载"
+                            HeaderIcon="{dev:FontIcon Glyph=&#xE896;}"
+                            Tag="Appearance">
+                            <dev:SettingsExpander.Items>
+                                <dev:SettingsCard Header="下载线程">
+                                    <NumberBox
+                                        x:Name="DownloadThreads"
+                                        Width="400"
+                                        MinWidth="200"
+                                        HorizontalAlignment="Right"
+                                        AcceptsExpression="True"
+                                        Maximum="128"
+                                        Minimum="1"
+                                        SpinButtonPlacementMode="Inline"/>
+                                </dev:SettingsCard>
+                                <dev:SettingsCard Header="安装完成保留 Appx 文件">
+                                    <ToggleSwitch OnContent="" x:Name="SavaAppx" OffContent=""></ToggleSwitch>
+                                </dev:SettingsCard>
+                            </dev:SettingsExpander.Items>
 
-            <dev:SettingsExpander
-                Description="启动器的注入行为"
-                Header="注入"
-                HeaderIcon="{dev:FontIcon Glyph=&#xE840;}"
-                Tag="Appearance">
-                <dev:SettingsExpander.Items>
-                    <dev:SettingsCard Header="延迟注入时间 (ms)">
-                        <NumberBox
-                            x:Name="DelayTime"
-                            Width="400"
-                            Minimum="800"
-                            Maximum="20000"
-                            SpinButtonPlacementMode="Inline"
-                            AcceptsExpression="True"
-                            HorizontalAlignment="Left" />
-                    </dev:SettingsCard>
-                </dev:SettingsExpander.Items>
+                        </dev:SettingsExpander>
 
-            </dev:SettingsExpander>
+                        <dev:SettingsExpander
+                            Description="启动器的注入行为"
+                            Header="注入"
+                            HeaderIcon="{dev:FontIcon Glyph=&#xE840;}"
+                            Tag="Appearance">
+                            <dev:SettingsExpander.Items>
+                                <dev:SettingsCard Header="延迟注入时间 (ms)">
+                                    <NumberBox
+                                        x:Name="DelayTime"
+                                        Width="400"
+                                        Minimum="800"
+                                        Maximum="20000"
+                                        SpinButtonPlacementMode="Inline"
+                                        AcceptsExpression="True"
+                                        HorizontalAlignment="Left" />
+                                </dev:SettingsCard>
+                            </dev:SettingsExpander.Items>
 
-            <TextBlock
-                Margin="0,10,0,0"
-                Style="{StaticResource Subtitle}"
-                Text="游戏" />
-            
-            <dev:SettingsExpander
-                    Description="游戏存储根目录"
-                    Header="游戏目录"
-                    HeaderIcon="{dev:FontIcon Glyph=&#xE8B7;}"
-                    Tag="Appearance">
-                <dev:SettingsExpander.Items>
-                    <dev:SettingsCard Header="默认下载目录">
-                        <ComboBox Width="400" x:Name="GameFoldersChooseBox"
-                                  SelectionChanged="GameFoldersChooseBox_SelectionChanged"></ComboBox>
-                    </dev:SettingsCard>
+                        </dev:SettingsExpander>
 
-                    <dev:SettingsCard Header="操作">
-                        <StackPanel Orientation="Horizontal">
-                            <Button Margin="0,0,5,0" Width="120">删除所选目录</Button>
-                            <Button Margin="5,0,0,0" Width="270" Style="{StaticResource AccentButtonStyle}" Name="ImportGameFolder"
-                                    Click="ImportGameFolder_Click">导入 Bedrock 数据目录</Button>
-                        </StackPanel>
-                    </dev:SettingsCard>
-                </dev:SettingsExpander.Items>
+                        <TextBlock
+                            Margin="0,10,0,0"
+                            Style="{StaticResource Subtitle}"
+                            Text="游戏" />
+                        
+                        <dev:SettingsExpander
+                                Description="游戏存储根目录"
+                                Header="游戏目录"
+                                HeaderIcon="{dev:FontIcon Glyph=&#xE8B7;}"
+                                Tag="Appearance">
+                            <dev:SettingsExpander.Items>
+                                <dev:SettingsCard Header="默认下载目录">
+                                    <ComboBox Width="400" x:Name="GameFoldersChooseBox"
+                                            SelectionChanged="GameFoldersChooseBox_SelectionChanged"></ComboBox>
+                                </dev:SettingsCard>
 
-            </dev:SettingsExpander>
+                                <dev:SettingsCard Header="操作">
+                                    <StackPanel Orientation="Horizontal">
+                                        <Button Margin="0,0,5,0" Width="120">删除所选目录</Button>
+                                        <Button Margin="5,0,0,0" Width="270" Style="{StaticResource AccentButtonStyle}" Name="ImportGameFolder"
+                                                Click="ImportGameFolder_Click">导入 Bedrock 数据目录</Button>
+                                    </StackPanel>
+                                </dev:SettingsCard>
+                            </dev:SettingsExpander.Items>
 
-            <TextBlock
-                Margin="0,10,0,0"
-                Style="{StaticResource Subtitle}"
-                Text="关于" />
-            <dev:SettingsExpander
-                Description="© 2025 Round-Studio 版权没有（开源软件都要盗吗）"
-                Header="关于"
-                HeaderIcon="{dev:FontIcon Glyph=&#xEC7A;}"
-                Tag="About">
-                <HyperlinkButton NavigateUri="https://github.com/Round-Studio/BedrockBoot">BedrockBoot - Github</HyperlinkButton>
-                <dev:SettingsExpander.Items>
-                    <dev:SettingsCard Header="开发者">
-                        <dev:SettingsCard.Content>
-                            <StackPanel Orientation="Horizontal">
-                                <controls:PersonPictureButton />
-                                <controls:PersonPictureButton />
-                                <controls:PersonPictureButton />
-                            </StackPanel>
-                        </dev:SettingsCard.Content>
-                    </dev:SettingsCard>
-                </dev:SettingsExpander.Items>
-            </dev:SettingsExpander>
-            <dev:SettingsExpander
-                Description="我们使用的开源项目 (※ 为自开发项目)"
-                Header="开源项目"
-                HeaderIcon="{dev:FontIcon Glyph=&#xE8F1;}"
-                Tag="About">
-                <dev:SettingsExpander.Items>
-                    <dev:SettingsCard Header="WinUI">
-                        <dev:SettingsCard.Content>
-                            <StackPanel Orientation="Horizontal">
-                                <HyperlinkButton NavigateUri="https://learn.microsoft.com/zh-cn/windows/apps/winui/">MSDN</HyperlinkButton>
-                            </StackPanel>
-                        </dev:SettingsCard.Content>
-                    </dev:SettingsCard>
-                    <dev:SettingsCard Header="DevWinUI">
-                        <dev:SettingsCard.Content>
-                            <StackPanel Orientation="Horizontal">
-                                <HyperlinkButton NavigateUri="https://github.com/ghost1372/DevWinUI">Github</HyperlinkButton>
-                            </StackPanel>
-                        </dev:SettingsCard.Content>
-                    </dev:SettingsCard>
-                    <dev:SettingsCard Header="WindowsCommunityToolkit">
-                        <dev:SettingsCard.Content>
-                            <StackPanel Orientation="Horizontal">
-                                <HyperlinkButton NavigateUri="https://github.com/CommunityToolkit/WindowsCommunityToolkit">Github</HyperlinkButton>
-                            </StackPanel>
-                        </dev:SettingsCard.Content>
-                    </dev:SettingsCard>
-                    <dev:SettingsCard Header="WindowsAppSDK">
-                        <dev:SettingsCard.Content>
-                            <StackPanel Orientation="Horizontal">
-                                <HyperlinkButton NavigateUri="https://github.com/microsoft/WindowsAppSDK">Github</HyperlinkButton>
-                            </StackPanel>
-                        </dev:SettingsCard.Content>
-                    </dev:SettingsCard>
-                    <dev:SettingsCard Header="※ BedrockLauncher.Core">
-                        <dev:SettingsCard.Content>
-                            <StackPanel Orientation="Horizontal">
-                                <HyperlinkButton NavigateUri="https://docs.roundstudio.top/docs/%E6%96%87%E6%A1%A3/%E4%BA%A7%E5%93%81%E6%96%87%E6%A1%A3/BedrockLauncher.Core/Introduct">Docs</HyperlinkButton>
-                                <HyperlinkButton NavigateUri="https://github.com/Round-Studio/BedrockLauncher.Core">Github</HyperlinkButton>
-                            </StackPanel>
-                        </dev:SettingsCard.Content>
-                    </dev:SettingsCard>
-                    <dev:SettingsCard Header="※ Uwp.Injector">
-                        <dev:SettingsCard.Content>
-                            <StackPanel Orientation="Horizontal">
-                                <HyperlinkButton NavigateUri="https://github.com/Round-Studio/Uwp.Injector">Github</HyperlinkButton>
-                            </StackPanel>
-                        </dev:SettingsCard.Content>
-                    </dev:SettingsCard>
-                    <dev:SettingsCard Header="CONCRT140_APP">
-                        <dev:SettingsCard.Content>
-                            <StackPanel Orientation="Horizontal">
-                                <HyperlinkButton NavigateUri="https://github.com/QYCottage/CONCRT140_APP">Github</HyperlinkButton>
-                            </StackPanel>
-                        </dev:SettingsCard.Content>
-                    </dev:SettingsCard>
-                </dev:SettingsExpander.Items>
-            </dev:SettingsExpander>
+                        </dev:SettingsExpander>
 
-        </StackPanel>
-    </ScrollView>
+                        <TextBlock
+                            Margin="0,10,0,0"
+                            Style="{StaticResource Subtitle}"
+                            Text="关于" />
+                        <dev:SettingsExpander
+                            Description="© 2025 Round-Studio 版权没有（开源软件都要盗吗）"
+                            Header="关于"
+                            HeaderIcon="{dev:FontIcon Glyph=&#xEC7A;}"
+                            Tag="About">
+                            <HyperlinkButton NavigateUri="https://github.com/Round-Studio/BedrockBoot">BedrockBoot - Github</HyperlinkButton>
+                            <dev:SettingsExpander.Items>
+                                <dev:SettingsCard Header="开发者">
+                                    <dev:SettingsCard.Content>
+                                        <StackPanel Orientation="Horizontal">
+                                            <controls:PersonPictureButton />
+                                            <controls:PersonPictureButton />
+                                            <controls:PersonPictureButton />
+                                        </StackPanel>
+                                    </dev:SettingsCard.Content>
+                                </dev:SettingsCard>
+                            </dev:SettingsExpander.Items>
+                        </dev:SettingsExpander>
+                        <dev:SettingsExpander
+                            Description="我们使用的开源项目 (※ 为自开发项目)"
+                            Header="开源项目"
+                            HeaderIcon="{dev:FontIcon Glyph=&#xE8F1;}"
+                            Tag="About">
+                            <dev:SettingsExpander.Items>
+                                <dev:SettingsCard Header="WinUI">
+                                    <dev:SettingsCard.Content>
+                                        <StackPanel Orientation="Horizontal">
+                                            <HyperlinkButton NavigateUri="https://learn.microsoft.com/zh-cn/windows/apps/winui/">MSDN</HyperlinkButton>
+                                        </StackPanel>
+                                    </dev:SettingsCard.Content>
+                                </dev:SettingsCard>
+                                <dev:SettingsCard Header="DevWinUI">
+                                    <dev:SettingsCard.Content>
+                                        <StackPanel Orientation="Horizontal">
+                                            <HyperlinkButton NavigateUri="https://github.com/ghost1372/DevWinUI">Github</HyperlinkButton>
+                                        </StackPanel>
+                                    </dev:SettingsCard.Content>
+                                </dev:SettingsCard>
+                                <dev:SettingsCard Header="WindowsCommunityToolkit">
+                                    <dev:SettingsCard.Content>
+                                        <StackPanel Orientation="Horizontal">
+                                            <HyperlinkButton NavigateUri="https://github.com/CommunityToolkit/WindowsCommunityToolkit">Github</HyperlinkButton>
+                                        </StackPanel>
+                                    </dev:SettingsCard.Content>
+                                </dev:SettingsCard>
+                                <dev:SettingsCard Header="WindowsAppSDK">
+                                    <dev:SettingsCard.Content>
+                                        <StackPanel Orientation="Horizontal">
+                                            <HyperlinkButton NavigateUri="https://github.com/microsoft/WindowsAppSDK">Github</HyperlinkButton>
+                                        </StackPanel>
+                                    </dev:SettingsCard.Content>
+                                </dev:SettingsCard>
+                                <dev:SettingsCard Header="※ BedrockLauncher.Core">
+                                    <dev:SettingsCard.Content>
+                                        <StackPanel Orientation="Horizontal">
+                                            <HyperlinkButton NavigateUri="https://docs.roundstudio.top/docs/%E6%96%87%E6%A1%A3/%E4%BA%A7%E5%93%81%E6%96%87%E6%A1%A3/BedrockLauncher.Core/Introduct">Docs</HyperlinkButton>
+                                            <HyperlinkButton NavigateUri="https://github.com/Round-Studio/BedrockLauncher.Core">Github</HyperlinkButton>
+                                        </StackPanel>
+                                    </dev:SettingsCard.Content>
+                                </dev:SettingsCard>
+                                <dev:SettingsCard Header="※ Uwp.Injector">
+                                    <dev:SettingsCard.Content>
+                                        <StackPanel Orientation="Horizontal">
+                                            <HyperlinkButton NavigateUri="https://github.com/Round-Studio/Uwp.Injector">Github</HyperlinkButton>
+                                        </StackPanel>
+                                    </dev:SettingsCard.Content>
+                                </dev:SettingsCard>
+                                <dev:SettingsCard Header="CONCRT140_APP">
+                                    <dev:SettingsCard.Content>
+                                        <StackPanel Orientation="Horizontal">
+                                            <HyperlinkButton NavigateUri="https://github.com/QYCottage/CONCRT140_APP">Github</HyperlinkButton>
+                                        </StackPanel>
+                                    </dev:SettingsCard.Content>
+                                </dev:SettingsCard>
+                            </dev:SettingsExpander.Items>
+                        </dev:SettingsExpander>
+
+                    </StackPanel>
+                </ScrollView>
+        </Grid>
+    </Grid>
 </Page>
